# pritunl-rs

./: .gitignore  Cargo.toml  pritunl-rs.code-workspace
.github/workflows/: default.yml  release.yml
src/: app.rs  error.rs  lib.rs  main.rs  socket.rs
src/service/: events.rs  mod.rs  ping.rs  profile.rs  restart.rs  sprofile.rs  state.rs  status.rs  stop.rs  token.rs  wakeup.rs
