[package]
name = "pritunl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
directories = "3.0.2"
humantime = "2.1.0"
